--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-/*Coursera Wev Dev with Yaakov!
+/*Coursera Wev Dev with Yaakov!!
 Module 2
 March 15, 2022
 Stewart*/
@@ -32,7 +32,7 @@ p {
 }
 
 #p1 {
-  background-color: #00FFFF;
+  background-color: #990025;
   position: relative;
   float: right;
   text-align: center;
@@ -44,7 +44,7 @@ p {
 }
 
 #p2 {
-  background-color: #222222;
+  background-color: #009925;
   position: relative;
   float: right;
   text-align: center;
@@ -56,7 +56,7 @@ p {
 }
 
 #p3 {
-  background-color: #656565;
+  background-color: #250099;
   position: relative;
   float: right;
   text-align: center;
@@ -77,7 +77,7 @@ p {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid black;
+    
    
   }
   .col-lg-1 {
@@ -122,7 +122,7 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid black;
+    
 
 
   }
